--- a/protocol/rest/rest_config_reader/testdata/consumer_config.yml
+++ b/protocol/rest/rest_config_reader/testdata/consumer_config.yml
@@ -7,6 +7,10 @@ request_timeout : "100ms"
 # connect timeout
 connect_timeout : "100ms"
 check: true
+rest_server: "resty"
+rest_produces: "*/*"
+rest_consumes: "*/*"
+
 # application config
 application:
   organization : "ikurento.com"
@@ -35,13 +39,16 @@ references:
   "UserProvider":
     registry: "hangzhouzk,shanghaizk"
     filter: ""
-    protocol : "dubbo"
+    protocol : "rest"
     version: "1.0"
     group: "as"
     interface : "com.ikurento.user.UserProvider"
     url: "dubbo://127.0.0.1:20000/UserProvider"
     cluster: "failover"
     timeout: "3s"
+    rest_client: "resty"
+    rest_produces: "*/*"
+    rest_consumes: "*/*"
     methods :
       - name: "GetUser"
         retries: "3"
@@ -49,6 +56,10 @@ references:
         rest_query_params: "1:userid,2:username"
         rest_headrs: "3:age"
         rest_path_params: "4:time,2:name"
+        rest_body: 0
+        rest_produces: "*/*"
+        rest_consumes: "*/*"
+
     params:
       "serviceid":
         "soa.com.ikurento.user.UserProvider"
@@ -58,43 +69,3 @@ shutdown_conf:
   timeout: 60s
   step_timeout: 10s
 
-protocol_conf:
-  # when you choose the Dubbo protocol, the following configuration takes effect
-  dubbo:
-    reconnect_interval: 0
-    # reconnect_interval is the actual number of connections a session can use
-    connection_number: 2
-    # heartbeat_period is heartbeat interval between server and client connection.
-    # Effective by client configuration
-    heartbeat_period: "30s"
-    # when the session is inactive for more than session_timeout, the session may be closed
-    session_timeout: "30s"
-    # a reference has the size of the session connection pool
-    # that is the maximum number of sessions it may have
-    pool_size: 4
-    # dubbo-go uses getty as the network connection library.
-    # The following is the relevant configuration of getty
-    pool_ttl: 600
-    # gr_pool_size is recommended to be set to [cpu core number] * 100
-    gr_pool_size: 1200
-    # queue_len is recommended to be set to 64 or 128
-    queue_len: 64
-    # queue_number is recommended to be set to gr_pool_size / 20
-    queue_number: 60
-    # dubbo-go uses getty as the network connection library.
-    # The following is the relevant configuration of getty
-    getty_session_param:
-      compress_encoding: false
-      tcp_no_delay: true
-      tcp_keep_alive: true
-      keep_alive_period: "120s"
-      tcp_r_buf_size: 262144
-      tcp_w_buf_size: 65536
-      pkg_wq_size: 512
-      tcp_read_timeout: "1s"
-      tcp_write_timeout: "5s"
-      wait_timeout: "1s"
-      # maximum len of data per request
-      # this refers to the total amount of data requested or returned
-      max_msg_len: 102400
-      session_name: "client"
