--- a/protocol/rest/rest_config_reader/testdata/provider_config.yml
+++ b/protocol/rest/rest_config_reader/testdata/provider_config.yml
@@ -54,7 +54,7 @@ services:
     group: "as"
     warmup: "100"
     cluster: "failover"
-    rest_server: "go-restful"
+    rest_server: "go-restful1"
     rest_produces: "*/*"
     rest_consumes: "*/*"
     methods:
@@ -67,11 +67,11 @@ services:
         # the name of RejectedExecutionHandler
         execute.limit.rejected.handler: "default"
         rest_query_params: "1:userid,2:username"
-        rest_headrs: "3:age"
+        rest_headers: "3:age"
         rest_path_params: "4:time,2:name"
         rest_body: 0
-        rest_produces: "*/*"
-        rest_consumes: "*/*"
+        rest_produces: "application/xml"
+        rest_consumes: "application/xml"
 
 protocols:
     "rest":
